# backend-jaydendang

./: .env.example  Cargo.toml  Dockerfile  Makefile.toml  README.org  RPC_API_TEST.md  rust-toolchain.toml  rustfmt.toml  test_rpc.sh  test_user_rpc.sh
.circleci/: config.yml
.github/workflows/: main.yml  tests.yml  workflow.yml
crates/core/jd_core/: Cargo.toml
crates/core/jd_core/src/: config.rs  error.rs  lib.rs  state.rs  sui_client.rs
crates/core/jd_core/src/base/: bmc_macros.rs  macros_utils.rs  mod.rs  utils.rs
crates/core/jd_core/src/base/rest/: mod.rs
crates/core/jd_core/src/base/rpc/: handlers.rs  macros_utils.rs  mod.rs  prelude.rs  rpc_params.rs  rpc_result.rs  utils.rs
crates/core/jd_core/src/ctx/: error.rs  mod.rs
crates/core/jd_core/src/store/store/: mod.rs
crates/core/jd_core/src/sui/: sui_client.rs
crates/gateways/api_gateway/: Cargo.toml
crates/gateways/api_gateway/src/: error.rs  lib.rs  routes_rpc.rs  sui.rs
crates/gateways/api_gateway/src/auth/: mod.rs
crates/gateways/api_gateway/src/log/: mod.rs
crates/gateways/api_gateway/src/middleware/: mod.rs  mw_auth.rs  mw_auth_rbac.rs  mw_request_context.rs  mw_res_map.rs  mw_res_timestamp.rs  pagination.rs
crates/gateways/api_gateway/src/mw/: mod.rs  mw_auth.rs  mw_res_map.rs  mw_res_timestamp.rs
crates/gateways/api_gateway/src/routes/: mod.rs  route_login.rs  user.rs
crates/gateways/api_gateway/src/sui/: mod.rs  routes.rs  sponsor_routes.rs
crates/gateways/api_gateway/src/users/: mod.rs  user_routes.rs  user_rpc.rs
crates/gateways/web_server/: Cargo.toml
crates/gateways/web_server/src/: main.rs  sui_client.rs
crates/gateways/web_server/src/routes/: mod.rs  sui_routes.rs
crates/infrastructure/jd_infra/: Cargo.toml
crates/infrastructure/jd_messaging/: Cargo.toml
crates/infrastructure/jd_messaing/: Cargo.toml
crates/infrastructure/jd_storage/: Cargo.toml
crates/infrastructure/jd_storage/src/: lib.rs  utils.rs
crates/infrastructure/jd_storage/src/dbx/: error.rs  mod.rs
crates/infrastructure/jd_tracing/: Cargo.toml
crates/infrastructure/jd_tracing/src/: lib.rs
crates/infrastructure/jd_tracing/src/log/: mod.rs
crates/processors/analytics_processor/: Cargo.toml
crates/processors/notification_processor/: Cargo.toml
crates/services/auth_service/: Cargo.toml
crates/services/auth_service/src/: error.rs  lib.rs
crates/services/auth_service/src/application/: auth_service.rs  handlers.rs  mod.rs
crates/services/auth_service/src/domain/: auth_provider.rs  auth_user.rs  jwt.rs  mod.rs  nonce.rs  nonce_repository_trait.rs  signature_verifier_trait.rs  user_repository_trait.rs
crates/services/auth_service/src/infrastructure/: mod.rs  nonce_repository.rs  signature_verifier.rs  user_repository.rs
crates/services/auth_service/src/models/: mod.rs  requests.rs  (+1 more)
crates/services/sui_service/: Cargo.toml
crates/services/sui_service/src/: error.rs  lib.rs
crates/services/sui_service/src/application/: event_service.rs  mod.rs  read_service.rs
crates/services/sui_service/src/application/handlers/: mod.rs  sui_handler.rs
crates/services/sui_service/src/application/use_cases/: event_use_cases.rs  mod.rs  sui_use_cases.rs
crates/services/sui_service/src/domain/: mod.rs  sui_repository_trait.rs
crates/services/sui_service/src/infrastructure/: gas_station.rs  mod.rs  sui_repository_impl.rs
crates/services/sui_service/src/models/: mod.rs  requests.rs
crates/services/user_service/: Cargo.toml  README.org
crates/services/user_service/src/: error.rs  lib.rs
crates/services/user_service/src/application/: mod.rs
crates/services/user_service/src/application/handlers/: user_handler.rs
crates/services/user_service/src/application/use_cases/: create_user.rs  get_user.rs  mod.rs
crates/services/user_service/src/base/: mod.rs
crates/services/user_service/src/domain/: mod.rs  unified_user.rs  user_profile.rs  user_repository_trait.rs  user_service_trait.rs
crates/services/user_service/src/infra/: mod.rs  record.rs
crates/services/user_service/src/infrastructure/database/: user_repository_impl.rs
crates/services/user_service/src/models/: mod.rs
crates/services/user_service/src/users/: mod.rs  record.rs
crates/services/user_service/src/users/application/handlers/: mod.rs
crates/services/user_service/src/users/application/use_cases/: create_user.rs  get_user.rs
crates/services/user_service/src/users/domain/: mod.rs  repository.rs  service.rs
crates/services/user_service/src/users/infrastructure/: mod.rs  repository.rs
crates/services/user_service/src/users/repository/: handlers.rs  mod.rs  repository_impl.rs  repository_trait.rs  trait.rs
crates/shared/jd_contracts/: Cargo.toml
crates/shared/jd_contracts/src/user/: api.rs  dto.rs  error.rs  event.rs  mod.rs
crates/shared/jd_contracts/src/user/dtos/: mod.rs
crates/shared/jd_contracts/src/user/dtos/events/: mod.rs
crates/shared/jd_contracts/src/user/dtos/records/: mod.rs  user_profile_record.rs  user_record.rs
crates/shared/jd_contracts/src/user/dtos/requests/: create_profile_request.rs  create_user_request.rs  mod.rs  user_filter.rs
crates/shared/jd_contracts/src/user/dtos/responses/: create_profile_response.rs  mod.rs
crates/shared/jd_deencode/: Cargo.toml  README.org
crates/shared/jd_deencode/src/: lib.rs
crates/shared/jd_domain/: Cargo.toml
crates/shared/jd_domain/src/: error.rs  lib.rs  utils.rs
crates/shared/jd_domain/src/user/: mod.rs  profile.rs  user.rs
crates/shared/jd_domain/src/user_domain/: mod.rs  profile.rs  user.rs
crates/shared/jd_rpc_core/: Cargo.toml
crates/shared/jd_streams/: Cargo.toml
crates/shared/jd_typedenum/: Cargo.toml
crates/shared/jd_typedenum/src/: lib.rs
crates/shared/jd_utils/: Cargo.toml
crates/shared/jd_utils/src/: config.rs  enum_utils.rs  lib.rs  regex.rs
deployment/docker/: Dockerfile.postgres  docker-compose.postgres.yml
docs/: ReadFirst.org  deployment-guide.org
docs/api/: API_DOCS.org  AUTH_API_FOR_AI_INTEGRATION.md
docs/deployment/: self-hosted-deploy.org
sql/: 0002_user.sql  0003_update_timestamps.sql
(+17 files in other folders)
