[package]
name = "jd_core"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
serde.workspace = true
serde_with.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true
tracing.workspace = true
axum.workspace = true
regex = "1.10.2"

# Members
jd_utils = { path = "../../shared/jd_utils" }
jd_storage = { path = "../../infrastructure/jd_storage" }
serde_json = "1"
strum_macros = "0.27"
uuid = { workspace = true, features = ["serde"] }
redis = "0.31.0"
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
