[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tower-cookies.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_with.workspace = true
time.workspace = true
sqlx.workspace = true
derive_more.workspace = true
uuid = { workspace = true, features = ["serde"] }

async-trait = "0.1.88"
hyper = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
strum = "0.26"
strum_macros = "0.27"
chrono = { version = "0.4", features = ["serde"] }

# -- Libraries Members
jd_core = { path = "../../core/jd_core" }
jd_utils = { path = "../../shared/jd_utils" }
jd_contracts = { path = "../../shared/jd_contracts" }
jd_domain = { path = "../../shared/jd_domain" }

# -- Services
user_service = { path = "../../services/user_service" }
reqwest = "0.12.15"
thiserror.workspace = true
redis = "0.31.0"
