[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
dotenv = "0.15.0"
serde.workspace = true
serde_json = "1.0.140"
tokio.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Members
jd_core = { path = "../../core/jd_core" }
jd_tracing = { path = "../../infrastructure/jd_tracing" }
jd_utils = { path = "../../shared/jd_utils" }
api_gateway = { path = "../api_gateway" }
