[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
modql.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlx.workspace = true
serde_with.workspace = true
serde.workspace = true

# Members
jd_domain = { path = "../../shared/jd_domain" }
jd_contracts = { path = "../../shared/jd_contracts" }
jd_core = { path = "../../core/jd_core" }
jd_utils = { path = "../../shared/jd_utils" }
axum.workspace = true
serde_json = "1.0.140"
derive_more.workspace = true
strum_macros = "0.27.1"
uuid = { workspace = true, features = ["serde"] }
