[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
modql.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlx.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
axum.workspace = true
derive_more.workspace = true
uuid.workspace = true

serde_json = "1.0.140"
strum_macros = "0.27.1"
validator = { version = "0.20.0", features = ["derive"] }

# Members
jd_domain = { path = "../../shared/jd_domain" }
jd_contracts = { path = "../../shared/jd_contracts" }
jd_storage = { path = "../../infrastructure/jd_storage" }
jd_core = { path = "../../core/jd_core" }
jd_utils = { path = "../../shared/jd_utils" }
tracing.workspace = true
chrono = "0.4.41"
async-trait = "0.1.88"
