[package]
name = "jd_contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-query.workspace = true
time.workspace = true
sqlx.workspace = true
serde.workspace = true
modql.workspace = true
uuid.workspace = true
validator = { version = "0.20.0", features = ["derive"] }

jd_utils = { path = "../jd_utils" }
jd_domain = { path = "../jd_domain" }
