[package]
name = "jd_contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Serialization
serde.workspace = true
serde_with.workspace = true

# -- Database
sea-query.workspace = true
sqlx.workspace = true
modql.workspace = true

# -- Time
time.workspace = true

# -- Utilities
uuid.workspace = true
validator.workspace = true

# -- Internal Dependencies
jd_utils = { path = "../jd_utils" }
jd_domain = { path = "../jd_domain" }
