[package]
name = "jd_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
modql.workspace = true
sea-query.workspace = true
serde.workspace = true
serde_with.workspace = true
sqlx.workspace = true


# Members
jd_utils = { path = "../jd_utils" }
uuid = { workspace = true, features = ["serde"] }
