[package]
name = "jd_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
modql.workspace = true
sea-query.workspace = true
serde.workspace = true
serde_with.workspace = true
derive_more.workspace = true
time.workspace = true
sqlx.workspace = true


# Members
jd_utils = { path = "../jd_utils" }
jd_typedenum = { path = "../jd_typedenum" }
uuid = { workspace = true, features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
